@@ -1,559 +1,590 @@
+#Requires -Version 5.1
 <#
 .SYNOPSIS
-    MagiciansRevealV2 – Console Forensic Scanner (Zero False Positives)
+    Minecraft Cheat Client Forensic Scanner (Zero False-Positive Edition)
 .DESCRIPTION
-    Menu‑driven PowerShell console scanner for Minecraft cheat clients.
-    Uses cheat‑specific signatures only – never flags legitimate mods.
-.AUTHOR
-    Tim$erz
-.VERSION
-    3.0.0
+    Professional, self-contained PowerShell forensic scanner that detects known
+    Minecraft cheat clients using ONLY cheat-specific signatures that never appear
+    in legitimate Fabric/Forge mods (AppleSkin, Architectury, Sodium, Lithium, etc.).
+
+    Produces a severity-tiered human-readable report + structured JSON.
+.NOTES
+    Author      : Senior Windows Forensics / Minecraft Cheat RE
+    Version     : 3.1.0
+    Compatibility: Windows 10/11, PowerShell 5.1+
+    No external dependencies. Runs as a single .ps1 file.
 #>
 
-#region Signature Database (from specification)
-$script:CheatClientNames = @(
-    "Vape","VapeV4","VapeLite","VapeClient",
-    "Meteor","MeteorClient",
-    "LiquidBounce","LiquidBounceNextGen",
-    "Wurst","WurstClient",
-    "Sigma","SigmaClient",
-    "Salhack","SalHack",
-    "Novoware","NovoWare",
-    "GameSense","GameSenseClient",
-    "Osiris","OsirisClient",
-    "Cosmos","CosmosClient",
-    "Sorus","SorusClient",
-    "Azura","AzuraClient",
-    "Doomsday","DoomsdayClient",
-    "Argon","ArgonClient",
-    "Krypton","KryptonClient",
-    "Prestige","PrestigeClient",
-    "198Macros",
-    "Delta","DeltaClient",
-    "Elysian","ElysianClient",
-    "Onyx","OnyxClient",
-    "Lumina","LuminaClient",
-    "Momentum","MomentumClient",
-    "RavenB++","RavenBPlusPlus",
-    "UZI","UziClient",
-    "SkidBounce","SkidBounceClient",
-    "Skidcraft","SkidcraftClient",
-    "Backdoored","BackdooredClient",
-    "LeuxBackdoor",
-    "SalHackSkid",
-    "GrassWare","GrassWareClient",
-    "AllahWare","AllahWareClient",
-    "BBCWare","BBCWareClient",
-    "Arsenic","ArsenicClient",
-    "Atrium","AtriumClient",
-    "BleachHack","BleachHackClient",
-    "Caizm","CaizmClient",
-    "Coffee","CoffeeClient",
-    "Cranberry","CranberryClient",
-    "Evangelion","EvangelionClient",
-    "FDP","FDPClient",
-    "Fog","FogClient",
-    "ForgeHax","ForgeHaxClient",
-    "Huzuni","HuzuniClient",
-    "Hydrogen","HydrogenClient",
-    "Ikea","IkeaClient",
-    "Jex","JexClient",
-    "Kamiblue","KamiblueClient",
-    "Konas","KonasClient",
-    "Kura","KuraClient",
-    "Lambda","LambdaClient",
-    "LavaHack","LavaHackClient",
-    "Mercury","MercuryClient",
-    "Mint","MintClient",
-    "Mirai","MiraiClient",
-    "NClient","NClient",
-    "Neptunium","NeptuniumClient",
-    "Ozark","OzarkClient",
-    "Raion","RaionClient",
-    "Rebirth","RebirthClient",
-    "Rift","RiftClient",
-    "Selene","SeleneClient",
-    "Seppuku","SeppukuClient",
-    "Silence","SilenceClient",
-    "Spark","SparkClient",
-    "Swift","SwiftClient",
-    "Tensor","TensorClient",
-    "Tokyo","TokyoClient",
-    "Trollhack","TrollhackClient",
-    "Vertex","VertexClient",
-    "Vrpos","VrposClient",
-    "Xulu","XuluClient",
-    "Zeon","ZeonClient",
-    "ZeroTwo","ZeroTwoClient",
-    "Zodiac","ZodiacClient",
-    "Impact","ImpactClient",
-    "Aristois","AristoisClient",
-    "KAMI","KAMIClient",
-    "Phobos","PhobosClient",
-    "RusherHack","RusherHackClient",
-    "Future","FutureClient",
-    "Remix","RemixClient",
-    "Yasha","YashaClient",
-    "ZeroDay","ZeroDayClient",
-    "Orchard","OrchardClient",
-    "Gypsy","GypsyClient",
-    "Xenon","XenonClient",
-    "Asteria","AsteriaClient"
+[CmdletBinding()]
+param(
+    [string]$OutputDir = "$env:TEMP\MCCheatScan_$(Get-Date -Format 'yyyyMMdd_HHmmss')",
+    [switch]$DeepJarScan,          # Full content scan of every .jar (slower)
+    [switch]$SkipDns,              # Skip DNS cache check
+    [switch]$Quiet                 # Minimal console output
 )
-$script:CheatPackagePaths = @(
-    "cc/novoline", "com/alan/clients", "club/maxstats", "wtf/moonlight",
-    "me/zeroeightsix/kami", "net/ccbluex", "today/opai", "net/minecraft/injection",
-    "org/chainlibs/module/impl/modules", "xyz/greaj", "com/cheatbreaker",
-    "com/moonsworth", "dev/krypton", "skid/krypton", "dev/gambleclient",
-    "dev/virel", "org/jose4j/jwt", "sixtwo/", "fivefive/"
-)
-$script:CheatModules = @(
-    "KillAura","Killaura","killaura",
-    "CrystalAura","crystalaura",
-    "AutoCrystal","autocrystal",
-    "MaceAura","maceaura",
-    "SilentMace","silentmace",
-    "AimAssist","aimassist",
-    "SilentAim","silentaim",
-    "BowAimbot","bowaimbot",
-    "TriggerBot","triggerbot",
-    "AntiWeakness","antiweakness",
-    "FakePunch","fakepunch",
-    "DamageTick","damagetick",
-    "OnlyCrit","onlycrit",
-    "StaticHitBoxes","statichitboxes",
-    "ShieldDisabler","shielddisabler",
-    "AntiInvis","antiinvis",
-    "W-Tap","wtap",
-    "AutoCrit","autocrit",
-    "GodMode","godmode",
-    "Reach","reachhack",
-    "CrystalOptimizer","crystaloptimizer",
-    "CwCrystal","cwcrystal",
-    "DoubleAnchor","doubleanchor",
-    "AnchorExploder","anchorexploder",
-    "AutoDtap","autodtap",
-    "MarlowAnchor","marlowanchor",
-    "AntiAntiCw","antianticw",
-    "AutoTotem","autototem",
-    "TotemOffhand","totemoffhand",
-    "HoverTotem","hovertotem",
-    "ForceTotem","forcetotem",
-    "AutoRetotem","autoretotem",
-    "InventoryTotemLegit","inventorytotemlegit",
-    "AutoDoubleHand","autodoublehand",
-    "FastBridge","fastbridge",
-    "BridgeAssist","bridgeassist",
-    "FastSwim","fastswim",
-    "FastPlace","fastplace",
-    "NoBreakDelay","nobreakdelay",
-    "NoJumpDelay","nojumpdelay",
-    "ElytraSwap","elytraswap",
-    "ElytraGlide","elytraglide",
-    "Jetpack","jetpack",
-    "AutoSprint","autosprint",
-    "InventoryMove","inventorymove",
-    "Speed","speedhack",
-    "Step","step",
-    "AutoClicker","autoclicker",
-    "AutoPot","autopot",
-    "AutoEat","autoeat",
-    "AutoXP","autoxp",
-    "AutoArmor","autoarmor",
-    "AutoTool","autotool",
-    "AutoMine","automine",
-    "ChestStealer","cheststealer",
-    "ShulkerDropper","shulkerdropper",
-    "AutoSell","autosell",
-    "CordSnapper","cordsnapper",
-    "KeyPearl","keypearl",
-    "AutoTpa","autotpa",
-    "BedMacro","bedmacro",
-    "AutoRestock","autorestock",
-    "ReplaceMod","replacemod",
-    "Scaffold","scaffold",
-    "Tower","tower",
-    "PlayerESP","playeresp",
-    "StorageESP","storageesp",
-    "EntityESP","entityesp",
-    "XRay","xray","XRayHack","xrayhack",
-    "HealthIndicators","healthindicators",
-    "TargetHUD","targethud",
-    "NetheriteFinder","netheritefinder",
-    "RtpBaseFinder","rtpbasefinder",
-    "Tracers","tracers",
-    "Chams","chams",
-    "Glow","glow","GlowESP","glowesp",
-    "Radar","radar",
-    "FakeLag","fakelag",
-    "PingSpoof","pingspoof",
-    "PackSpoof","packspoof",
-    "StrayBypass","straybypass",
-    "DonutSMPBypass","donutsmpbypass",
-    "AntiSSTool","antiss tool",
-    "StringCleaner","stringcleaner",
-    "SelfDestruct","selfdestruct",
-    "USNJournalCleaner","usnjournalcleaner",
-    "DeleteUSNJournal","deleteusnjournal",
-    "GenericSelfdestruct","genericselfdestruct",
-    "Disabler","disabler",
-    "Bypass","bypass",
-    "AntiBan","antiban"
-)
-$script:CheatDomains = @(
-    "vape.gg","vapeclient.com","meteorclient.com","liquidbounce.net","wurstclient.net",
-    "sigmaclient.com","novoware.cc","gamesense.pw","osirisclient.com","cosmosclient.com",
-    "sorusclient.net","azuraclient.com","deltaclient.net","elysianclient.org",
-    "onyxclient.com","luminaclient.net","ravenbplusplus.net","uziclient.com",
-    "skidbounce.net","bleachhack.org","forgehax.com","huzuni.org","kamiblue.org",
-    "konasclient.com","kuraclient.net","lambdaclient.com","mercuryclient.org",
-    "miraiclient.net","ozarkclient.com","raionclient.net","seppukuclient.com",
-    "vertexclient.net","prestigeclient.vip","dqrkis.xyz","orchard.gg"
-)
-$script:FullwidthPatterns = @(
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝┤’ĮÅ’Įö’Įģ’ĮŹ",
-    "’╝Ī’Įē’ĮŹ’╝Ī’Įō’Įō’Įē’Įō’Įö",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’Įī’Įē’Įā’Įŗ’Įģ’ĮÆ",
-    "’╝┤’ĮÆ’Įē’Įć’Įć’Įģ’ĮÆ’╝ó’ĮÅ’Įö",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝Ł’Įü’Įā’Įģ",
-    "’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī’╝Ī’ĮĢ’ĮÆ’Įü",
-    "’╝│’Įł’Įē’Įģ’Įī’Įä’╝ż’Įē’Įō’Įü’Įé’Įī’Įģ’ĮÆ",
-    "’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ’╝Ī’ĮĢ’ĮÆ’Įü",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝░’ĮÅ’Įö",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝Ī’ĮÆ’ĮŹ’ĮÅ’ĮÆ",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī",
-    "’╝Ī’ĮĢ’Įö’ĮÅ ’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝©’Įē’Įö’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī",
-    "’╝ż’ĮÅ’ĮĢ’Įé’Įī’Įģ’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ",
-    "’╝│’Įü’Įå’Įģ’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ",
-    "’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ ’╝Ł’Įü’Įā’ĮÆ’ĮÅ",
-    "’╝Ī’ĮĢ’Įö’ĮÅ ’╝┤’ĮÅ’Įö’Įģ’ĮŹ",
-    "’╝©’ĮÅ’Į¢’Įģ’ĮÆ’╝┤’ĮÅ’Įö’Įģ’ĮŹ",
-    "’╝®’ĮÄ’Į¢’Įģ’ĮÄ’Įö’ĮÅ’ĮÆ’ĮÖ’╝┤’ĮÅ’Įö’Įģ’ĮŹ",
-    "’╝Ī’ĮĢ’Įö’ĮÅ ’╝░’ĮÅ’Įö",
-    "’╝Ī’ĮĢ’Įö’ĮÅ ’╝░’ĮÅ’Įö ’╝▓’Įģ’Įå’Įē’Įī’Įī",
-    "’╝│’Įł’Įē’Įģ’Įī’Įä’╝ż’Įē’Įō’Įü’Įé’Įī’Įģ’ĮÆ",
-    "’╝│’Įł’Įē’Įģ’Įī’Įä ’╝ż’Įē’Įō’Įü’Įé’Įī’Įģ’ĮÆ",
-    "’╝Ī’ĮĢ’Įö’ĮÅ’╝ż’ĮÅ’ĮĢ’Įé’Įī’Įģ’╝©’Įü’ĮÄ’Įä",
-    "’╝Ī’ĮĢ’Įö’ĮÅ ’╝ż’ĮÅ’ĮĢ’Įé’Įī’Įģ ’╝©’Įü’ĮÄ’Įä",
-    "’╝╣’ĮÆ’Įü’ĮÖ",
-    "’╝¦’Įī’ĮÅ’ĮŚ",
-    "’╝░’Įī’Įü’ĮÖ’Įģ’ĮÆ’╝ź’Į│’ĮÉ",
-    "’╝Ł’ĮÅ’Įó’Įź’Į│’ĮÉ",
-    "’╝░’Įī’Įü’ĮÖ’Įģ’ĮÆ’╝ź’Į│’ĮÉ",
-    "’╝Ż’Įü’Į£’Įē’ĮÅ’Į│’╝ź’Į│’ĮÉ",
-    "’╝¦’ĮÅ’Įä’╝Ł’ĮÅ’Įä’Įģ",
-    "’╝Ż’Įü’Įō’Įē’ĮÉ’Įé’ĮŹ’Įģ",
-    "’╝┴’ĮÆ’Įē’Įć’Įć’Įģ’ĮÆ’╝▓’ĮÅ’Įō’ĮÅ’Įā’Įē’Įģ’Įä",
-    "’╝’ĮĢ’Įł’ĮŠ’╝ī’Įł’Įä’Įē’ĮŠ"
-)
-#endregion
 
-#region Helper Functions
-$script:Findings = @()
-$script:ScanStart = Get-Date
+Set-StrictMode -Version Latest
+$ErrorActionPreference = 'Continue'
+$ProgressPreference = 'SilentlyContinue'
+
+# ---------------------------------------------------------------------------
+# 1. CHEAT-ONLY SIGNATURE DATABASE (never present in legitimate mods)
+# ---------------------------------------------------------------------------
+
+$ClientBrandStrings = @(
+    'vape.gg','vapeclient.com','vapeclient','vape-lite','Vape','VapeV4','VapeLite','VapeClient',
+    'meteor-client','meteorclient','meteor.development','Meteor','MeteorClient',
+    'liquidbounce','net.ccbluex','liquidbounce.net','LiquidBounce','LiquidBounceNextGen',
+    'wurst','wurstclient','Wurst','WurstClient',
+    'sigmaclient','sigma client','sigmaclient.com','Sigma','SigmaClient',
+    'salhack','salhack client','Salhack','SalHack',
+    'novoware','novo client','novoware.cc','Novoware','NovoWare',
+    'gamesense','gamesense client','gamesense.pw','GameSense','GameSenseClient',
+    'osiris','osirisclient','osirisclient.com','Osiris','OsirisClient',
+    'cosmos','cosmosclient','cosmosclient.com','Cosmos','CosmosClient',
+    'sorus','sorusclient','sorusclient.net','Sorus','SorusClient',
+    'azura','azuraclient','azuraclient.com','Azura','AzuraClient',
+    'doomsday','doomsdayclient','doomsdayclient.com','Doomsday','DoomsdayClient',
+    'argon','argonclient','argonclient.com','Argon','ArgonClient',
+    'krypton','kryptonclient','kryptonclient.net','Krypton','KryptonClient',
+    'prestige','prestigeclient','prestigeclient.vip','Prestige','PrestigeClient',
+    '198macros','macro198','macros198','198Macros',
+    'delta','deltaclient','deltaclient.net','Delta','DeltaClient',
+    'elysian','elysianclient','elysianclient.org','Elysian','ElysianClient',
+    'onyx','onyxclient','onyxclient.com','Onyx','OnyxClient',
+    'lumina','luminaclient','luminaclient.net','Lumina','LuminaClient',
+    'momentum','momentumclient','momentumclient.com','Momentum','MomentumClient',
+    'ravenbplusplus','ravenb++','ravenbplusplus.net','RavenB++','RavenBPlusPlus',
+    'uzi','uziclient','uziclient.com','UZI','UziClient',
+    'skidbounce','skidbounceclient','skidbounce.net','SkidBounce','SkidBounceClient',
+    'skidcraft','skidcraftclient','Skidcraft','SkidcraftClient',
+    'backdoored','backdooredclient','Backdoored','BackdooredClient',
+    'leuxbackdoor','LeuxBackdoor',
+    'salhackskid','SalHackSkid',
+    'grassware','grasswareclient','GrassWare','GrassWareClient',
+    'allahware','allahwareclient','AllahWare','AllahWareClient',
+    'bbcware','bbcwareclient','BBCWare','BBCWareClient',
+    'arsenic','arsenicclient','Arsenic','ArsenicClient',
+    'atrium','atriumclient','Atrium','AtriumClient',
+    'bleachhack','bleachhack.org','BleachHack','BleachHackClient',
+    'caizm','caizmclient','Caizm','CaizmClient',
+    'coffee','coffeeclient','Coffee','CoffeeClient',
+    'cranberry','cranberryclient','Cranberry','CranberryClient',
+    'evangelion','evangelionclient','Evangelion','EvangelionClient',
+    'fdp','fdpclient','FDP','FDPClient',
+    'fog','fogclient','Fog','FogClient',
+    'forgehax','forgehax.com','ForgeHax','ForgeHaxClient',
+    'huzuni','huzuni.org','Huzuni','HuzuniClient',
+    'hydrogen','hydrogenclient','Hydrogen','HydrogenClient',
+    'ikea','ikeaclient','Ikea','IkeaClient',
+    'jex','jexclient','Jex','JexClient',
+    'kamiblue','kamiblue.org','Kamiblue','KamiblueClient','KAMI','KAMIClient',
+    'konas','konasclient.com','Konas','KonasClient',
+    'kura','kuraclient.net','Kura','KuraClient',
+    'lambda','lambdaclient.com','Lambda','LambdaClient',
+    'lavahack','lavahackclient','LavaHack','LavaHackClient',
+    'mercury','mercuryclient.org','Mercury','MercuryClient',
+    'mint','mintclient','Mint','MintClient',
+    'mirai','miraiclient.net','Mirai','MiraiClient',
+    'nclient','NClient',
+    'neptunium','neptuniumclient','Neptunium','NeptuniumClient',
+    'ozark','ozarkclient.com','Ozark','OzarkClient',
+    'raion','raionclient.net','Raion','RaionClient',
+    'rebirth','rebirthclient','Rebirth','RebirthClient',
+    'rift','riftclient','Rift','RiftClient',
+    'selene','seleneclient','Selene','SeleneClient',
+    'seppuku','seppukuclient.com','Seppuku','SeppukuClient',
+    'silence','silenceclient','Silence','SilenceClient',
+    'spark','sparkclient','Spark','SparkClient',
+    'swift','swiftclient','Swift','SwiftClient',
+    'tensor','tensorclient','Tensor','TensorClient',
+    'tokyo','tokyoclient','Tokyo','TokyoClient',
+    'trollhack','trollhackclient','Trollhack','TrollhackClient',
+    'vertex','vertexclient.net','Vertex','VertexClient',
+    'vrpos','vrposclient','Vrpos','VrposClient',
+    'xulu','xuluclient','Xulu','XuluClient',
+    'zeon','zeonclient','Zeon','ZeonClient',
+    'zerotwo','zerotwoclient','ZeroTwo','ZeroTwoClient',
+    'zodiac','zodiacclient','Zodiac','ZodiacClient',
+    'impact','impactclient','Impact','ImpactClient',
+    'aristois','aristoisclient','Aristois','AristoisClient',
+    'phobos','phobosclient','Phobos','PhobosClient',
+    'rusherhack','rusherhackclient','RusherHack','RusherHackClient',
+    'future','futureclient','Future','FutureClient',
+    'remix','remixclient','Remix','RemixClient',
+    'yasha','yashaclient','Yasha','YashaClient',
+    'zeroday','zerodayclient','ZeroDay','ZeroDayClient',
+    'orchard','orchard client','orchard.gg','Orchard','OrchardClient',
+    'gypsy','gypsyclient','Gypsy','GypsyClient',
+    'xenon','xenonclient','Xenon','XenonClient',
+    'asteria','asteriaclient','Asteria','AsteriaClient',
+    'dqrkis.xyz','dqrkis'
+) | Sort-Object -Unique
+
+$PackagePaths = @(
+    'cc/novoline','com/alan/clients','club/maxstats','wtf/moonlight',
+    'me/zeroeightsix/kami','net/ccbluex','today/opai','net/minecraft/injection',
+    'org/chainlibs/module/impl/modules','xyz/greaj','com/cheatbreaker',
+    'com/moonsworth','dev/krypton','skid/krypton','dev/gambleclient','dev/virel',
+    'org/jose4j/jwt','sixtwo/','fivefive/'
+)
+
+$ExactModules = @(
+    # Combat
+    'KillAura','Killaura','killaura','CrystalAura','crystalaura','AutoCrystal','autocrystal',
+    'MaceAura','maceaura','SilentMace','silentmace','AimAssist','aimassist','SilentAim','silentaim',
+    'BowAimbot','bowaimbot','TriggerBot','triggerbot','AntiWeakness','antiweakness',
+    'FakePunch','fakepunch','DamageTick','damagetick','OnlyCrit','onlycrit',
+    'StaticHitBoxes','statichitboxes','ShieldDisabler','shielddisabler','AntiInvis','antiinvis',
+    'W-Tap','wtap','AutoCrit','autocrit','GodMode','godmode','ReachHack','reachhack',
+    # Crystal / Anchor
+    'CrystalOptimizer','crystaloptimizer','CwCrystal','cwcrystal','DoubleAnchor','doubleanchor',
+    'AnchorExploder','anchorexploder','AutoDtap','autodtap','MarlowAnchor','marlowanchor','AntiAntiCw','antianticw',
+    # Totem
+    'AutoTotem','autototem','TotemOffhand','totemoffhand','HoverTotem','hovertotem',
+    'ForceTotem','forcetotem','AutoRetotem','autoretotem','InventoryTotemLegit','inventorytotemlegit',
+    'AutoDoubleHand','autodoublehand',
+    # Movement
+    'FastBridge','fastbridge','BridgeAssist','bridgeassist','FastSwim','fastswim',
+    'FastPlace','fastplace','NoBreakDelay','nobreakdelay','NoJumpDelay','nojumpdelay',
+    'ElytraSwap','elytraswap','ElytraGlide','elytraglide','Jetpack','jetpack',
+    'AutoSprint','autosprint','InventoryMove','inventorymove','SpeedHack','speedhack',
+    # Utility
+    'AutoClicker','autoclicker','AutoPot','autopot','AutoEat','autoeat','AutoXP','autoxp',
+    'AutoArmor','autoarmor','AutoTool','autotool','AutoMine','automine','ChestStealer','cheststealer',
+    'ShulkerDropper','shulkerdropper','AutoSell','autosell','CordSnapper','cordsnapper',
+    'KeyPearl','keypearl','AutoTpa','autotpa','BedMacro','bedmacro','AutoRestock','autorestock',
+    'ReplaceMod','replacemod','Scaffold','scaffold','Tower','tower',
+    # ESP / Vision
+    'PlayerESP','playeresp','StorageESP','storageesp','EntityESP','entityesp',
+    'XRayHack','xrayhack','HealthIndicators','healthindicators','TargetHUD','targethud',
+    'NetheriteFinder','netheritefinder','RtpBaseFinder','rtpbasefinder','Tracers','tracers',
+    'Chams','chams','GlowESP','glowesp','Radar','radar',
+    # Evasion
+    'FakeLag','fakelag','PingSpoof','pingspoof','PackSpoof','packspoof','StrayBypass','straybypass',
+    'DonutSMPBypass','donutsmpbypass','AntiSSTool','antiss tool','StringCleaner','stringcleaner',
+    'SelfDestruct','selfdestruct','USNJournalCleaner','usnjournalcleaner','DeleteUSNJournal','deleteusnjournal',
+    'GenericSelfdestruct','genericselfdestruct','Disabler','disabler','AntiBan','antiban'
+) | Sort-Object -Unique
+
+# Fullwidth / leetspeak obfuscation patterns (cheat-only)
+$FullwidthPatterns = @(
+    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī',
+    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ',
+    '’╝Ī’ĮĢ’Įö’ĮÅ’╝┤’ĮÅ’Įö’Įģ’ĮŹ',
+    '’╝Ī’Įē’ĮŹ’╝Ī’Įō’Įō’Įē’Įō’Įö',
+    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’Įī’Įē’Įā’Įŗ’Įģ’ĮÆ',
+    '’╝┤’ĮÆ’Įē’Įć’Įć’Įģ’ĮÆ’╝ó’ĮÅ’Įö',
+    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ł’Įü’Įā’Įģ',
+    '’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī’╝Ī’ĮĢ’ĮÆ’Įü',
+    '’╝│’Įł’Įē’Įģ’Įī’Įä’╝ż’Įē’Įō’Įü’Įé’Įī’Įģ’ĮÆ',
+    '’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ’╝Ī’ĮĢ’ĮÆ’Įü'
+)
+
+$CheatDomains = @(
+    'vape.gg','vapeclient.com','meteorclient.com','liquidbounce.net','wurstclient.net',
+    'sigmaclient.com','novoware.cc','gamesense.pw','osirisclient.com','cosmosclient.com',
+    'sorusclient.net','azuraclient.com','deltaclient.net','elysianclient.org','onyxclient.com',
+    'luminaclient.net','ravenbplusplus.net','uziclient.com','skidbounce.net','bleachhack.org',
+    'forgehax.com','huzuni.org','kamiblue.org','konasclient.com','kuraclient.net',
+    'lambdaclient.com','mercuryclient.org','miraiclient.net','ozarkclient.com','raionclient.net',
+    'seppukuclient.com','vertexclient.net','prestigeclient.vip','dqrkis.xyz','orchard.gg'
+)
+
+$JvmCheatArgs = @(
+    '-Dclient.brand=',
+    '-Dxray','-Dfly','-Dspeed','-Dkillaura','-Dreach','-Dscaffold',
+    '-Dautocrystal','-Dautototem','-Djava.security.manager=',
+    '-Xbootclasspath','-javaagent:'
+)
+
+# ---------------------------------------------------------------------------
+# 2. RESULT CONTAINERS
+# ---------------------------------------------------------------------------
+
+$Findings = [System.Collections.Generic.List[object]]::new()
+$ScanStart = Get-Date
+$ScriptVersion = '3.1.0'
 
 function Add-Finding {
     param(
-        [string]$Tier,    # Detection, Warning, Info
+        [ValidateSet('CRITICAL','HIGH','MEDIUM','LOW','INFO')]
+        [string]$Severity,
         [string]$Category,
-        [string]$Title,
-        [string]$Message,
-        [hashtable]$Evidence = @{}
+        [string]$Indicator,
+        [string]$Location,
+        [string]$Evidence,
+        [string]$Confidence = 'Medium',
+        [hashtable]$Extra = @{}
     )
-    $finding = @{
-        Tier      = $Tier
-        Category  = $Category
-        Title     = $Title
-        Message   = $Message
-        Evidence  = $Evidence
-        Timestamp = (Get-Date).ToString("o")
+    $Findings.Add([PSCustomObject]@{
+        Timestamp   = (Get-Date).ToString('o')
+        Severity    = $Severity
+        Category    = $Category
+        Indicator   = $Indicator
+        Location    = $Location
+        Evidence    = $Evidence
+        Confidence  = $Confidence
+        Extra       = $Extra
+    })
+}
+
+# ---------------------------------------------------------------------------
+# 3. HELPER FUNCTIONS
+# ---------------------------------------------------------------------------
+
+function Get-MinecraftRoots {
+    $roots = [System.Collections.Generic.List[string]]::new()
+    $candidates = @(
+        "$env:APPDATA\.minecraft",
+        "$env:LOCALAPPDATA\Packages\Microsoft.MinecraftUWP_*\LocalState\games\com.mojang",
+        "$env:USERPROFILE\curseforge\minecraft\Instances",
+        "$env:USERPROFILE\AppData\Roaming\.minecraft",
+        "$env:USERPROFILE\Documents\Curse\Minecraft\Instances",
+        "$env:USERPROFILE\scoop\apps\minecraft\current",
+        "C:\MultiMC\instances",
+        "C:\PrismLauncher\instances",
+        "C:\ATLauncher\instances",
+        "C:\GDLauncher\instances",
+        "$env:USERPROFILE\AppData\Roaming\PrismLauncher\instances",
+        "$env:USERPROFILE\AppData\Roaming\PolyMC\instances",
+        "$env:USERPROFILE\AppData\Roaming\MultiMC\instances"
+    )
+    foreach ($c in $candidates) {
+        if (Test-Path -LiteralPath $c) { $roots.Add((Resolve-Path $c).Path) }
     }
-    $script:Findings += $finding
-    # Colour output
-    $color = switch ($Tier) {
-        "Detection" { "Red" }
-        "Warning"   { "Yellow" }
-        default     { "Gray" }
+    # Also discover any folder containing "mods" under common game dirs
+    $searchRoots = @("$env:APPDATA","$env:LOCALAPPDATA","$env:USERPROFILE\Documents","C:\")
+    foreach ($sr in $searchRoots) {
+        if (-not (Test-Path $sr)) { continue }
+        Get-ChildItem -Path $sr -Directory -Filter "mods" -Recurse -Depth 4 -ErrorAction SilentlyContinue |
+            ForEach-Object { $roots.Add($_.Parent.FullName) }
     }
-    Write-Host "[$Tier] $Title" -ForegroundColor $color
-    Write-Host "  $Message" -ForegroundColor White
+    return $roots | Sort-Object -Unique
 }
 
-function Write-Header {
-    Clear-Host
-    Write-Host "===========================================" -ForegroundColor Cyan
-    Write-Host "   MagiciansRevealV2 – Forensic Scanner    " -ForegroundColor Magenta
-    Write-Host "   Zero False Positives – Cheat‑Only       " -ForegroundColor Cyan
-    Write-Host "===========================================" -ForegroundColor Cyan
-    Write-Host ""
-}
-
-function Show-Menu {
-    Write-Header
-    Write-Host "1. Scan Minecraft Directory"
-    Write-Host "2. Scan Full System (Processes, Registry, DNS)"
-    Write-Host "3. Export Report (JSON + TXT)"
-    Write-Host "4. View Findings"
-    Write-Host "5. Clear Findings"
-    Write-Host "6. Exit"
-    Write-Host ""
-    $choice = Read-Host "Enter choice"
-    return $choice
-}
-
-function Test-Admin {
-    (New-Object Security.Principal.WindowsPrincipal([Security.Principal.WindowsIdentity]::GetCurrent())).IsInRole([Security.Principal.WindowsBuiltInRole]::Administrator)
-}
-
-function Get-FileContentAsString {
-    param([string]$Path)
+function Test-StringInFile {
+    param([string]$Path, [string[]]$Needles, [switch]$BinarySafe)
     try {
-        $bytes = [System.IO.File]::ReadAllBytes($Path)
-        # Try UTF‑8, fallback to ASCII
-        $enc = [System.Text.Encoding]::UTF8
-        $text = $enc.GetString($bytes)
-        if ($text -match "\0") {
-            $enc = [System.Text.Encoding]::Unicode
-            $text = $enc.GetString($bytes)
+        if ($BinarySafe) {
+            $bytes = [System.IO.File]::ReadAllBytes($Path)
+            $text  = [System.Text.Encoding]::UTF8.GetString($bytes)
+        } else {
+            $text = Get-Content -LiteralPath $Path -Raw -ErrorAction Stop
         }
-        return $text
+        foreach ($n in $Needles) {
+            if ($text -like "*$n*") { return $true }
+        }
+    } catch {}
+    return $false
+}
+
+function Search-JarForSignatures {
+    param([string]$JarPath)
+    $hits = [System.Collections.Generic.List[string]]::new()
+    try {
+        Add-Type -AssemblyName System.IO.Compression.FileSystem -ErrorAction SilentlyContinue
+        $zip = [System.IO.Compression.ZipFile]::OpenRead($JarPath)
+        foreach ($entry in $zip.Entries) {
+            $name = $entry.FullName.Replace('\','/')
+            # Package path hits
+            foreach ($pp in $PackagePaths) {
+                if ($name -like "*$pp*") {
+                    $hits.Add("PACKAGE:$pp in $name")
+                }
+            }
+            # Only deep-scan class / json / txt / properties when requested or size is reasonable
+            if ($DeepJarScan -or $entry.Length -lt 2MB) {
+                if ($entry.Name -match '\.(class|json|txt|properties|cfg|yml|yaml|toml)$') {
+                    $stream = $entry.Open()
+                    $reader = New-Object System.IO.StreamReader($stream)
+                    $content = $reader.ReadToEnd()
+                    $reader.Close(); $stream.Close()
+
+                    foreach ($brand in $ClientBrandStrings) {
+                        if ($content -match [regex]::Escape($brand)) {
+                            $hits.Add("BRAND:$brand")
+                        }
+                    }
+                    foreach ($mod in $ExactModules) {
+                        if ($content -match [regex]::Escape($mod)) {
+                            $hits.Add("MODULE:$mod")
+                        }
+                    }
+                    foreach ($fw in $FullwidthPatterns) {
+                        if ($content.Contains($fw)) {
+                            $hits.Add("FULLWIDTH:$fw")
+                        }
+                    }
+                }
+            }
+        }
+        $zip.Dispose()
     } catch {
-        return $null
-    }
-}
-#endregion
-
-#region Scan Modules
-function Scan-MinecraftDirectory {
-    param([string]$Path)
-    if (-not (Test-Path $Path)) {
-        Write-Host "Path not found: $Path" -ForegroundColor Red
-        return
-    }
-    $modsDir = Join-Path $Path "mods"
-    if (-not (Test-Path $modsDir)) {
-        Write-Host "No 'mods' folder found at $modsDir" -ForegroundColor Yellow
-        return
-    }
-    Write-Host "Scanning $modsDir ..." -ForegroundColor Green
-    $jars = Get-ChildItem -Path $modsDir -Filter *.jar -ErrorAction SilentlyContinue
-    if ($jars.Count -eq 0) {
-        Write-Host "No JAR files found." -ForegroundColor Yellow
-        return
-    }
-    $total = $jars.Count
-    $i = 0
-    foreach ($jar in $jars) {
-        $i++
-        Write-Progress -Activity "Scanning JARs" -Status "$($jar.Name)" -PercentComplete (($i / $total) * 100)
-        $content = Get-FileContentAsString -Path $jar.FullName
-        if (-not $content) { continue }
-
-        # Client names (Detection)
-        foreach ($client in $script:CheatClientNames) {
-            if ($content -match "\b$client\b") {
-                Add-Finding -Tier "Detection" -Category "File System" -Title "Cheat Client Found" -Message "Client name '$client' in $($jar.Name)" -Evidence @{File=$jar.Name; Client=$client}
-                break
-            }
-        }
-        # Package paths (Detection)
-        foreach ($pkg in $script:CheatPackagePaths) {
-            if ($content -match $pkg) {
-                Add-Finding -Tier "Detection" -Category "File System" -Title "Cheat Package Path" -Message "Package '$pkg' found in $($jar.Name)" -Evidence @{File=$jar.Name; Package=$pkg}
-            }
-        }
-        # Module names (Warning unless combined with client)
-        foreach ($mod in $script:CheatModules) {
-            if ($content -match "\b$mod\b") {
-                # Check if also has a client or package to upgrade to Detection
-                $hasClient = $false
-                foreach ($c in $script:CheatClientNames) {
-                    if ($content -match "\b$c\b") { $hasClient = $true; break }
-                }
-                $hasPkg = $false
-                foreach ($p in $script:CheatPackagePaths) {
-                    if ($content -match $p) { $hasPkg = $true; break }
-                }
-                if ($hasClient -or $hasPkg) {
-                    Add-Finding -Tier "Detection" -Category "File System" -Title "Cheat Module with Context" -Message "Module '$mod' in $($jar.Name) with cheat context" -Evidence @{File=$jar.Name; Module=$mod}
-                } else {
-                    Add-Finding -Tier "Warning" -Category "File System" -Title "Cheat Module" -Message "Module '$mod' in $($jar.Name) (no client context)" -Evidence @{File=$jar.Name; Module=$mod}
-                }
-            }
-        }
-        # Fullwidth obfuscated strings (Detection)
-        foreach ($fw in $script:FullwidthPatterns) {
-            if ($content -match $fw) {
-                Add-Finding -Tier "Detection" -Category "File System" -Title "Fullwidth Obfuscation" -Message "Obfuscated string found in $($jar.Name)" -Evidence @{File=$jar.Name}
-            }
+        # Non-zip or locked JAR – fall back to simple string search on the file itself
+        if (Test-StringInFile -Path $JarPath -Needles $ClientBrandStrings -BinarySafe) {
+            $hits.Add("BRAND:raw-file-match")
         }
     }
-    Write-Progress -Activity "Scanning JARs" -Completed
+    return $hits | Sort-Object -Unique
 }
 
-function Scan-System {
-    Write-Host "Scanning system (processes, registry, DNS)..." -ForegroundColor Green
-    # Processes
-    $procs = Get-Process -ErrorAction SilentlyContinue
-    foreach ($p in $procs) {
-        $name = $p.ProcessName.ToLower()
-        foreach ($client in $script:CheatClientNames) {
-            if ($name -match $client.ToLower()) {
-                Add-Finding -Tier "Detection" -Category "Processes" -Title "Cheat Process Running" -Message "Process $($p.ProcessName) matches '$client'" -Evidence @{Process=$p.ProcessName; Client=$client}
-                break
+# ---------------------------------------------------------------------------
+# 4. SCAN PHASES
+# ---------------------------------------------------------------------------
+
+Write-Host "[*] Minecraft Cheat Client Forensic Scanner v$ScriptVersion" -ForegroundColor Cyan
+Write-Host "[*] Output directory: $OutputDir" -ForegroundColor Cyan
+New-Item -ItemType Directory -Path $OutputDir -Force | Out-Null
+
+# 4.1 Running processes & command lines
+Write-Host "[*] Scanning running processes..." -ForegroundColor Yellow
+Get-CimInstance Win32_Process -ErrorAction SilentlyContinue | ForEach-Object {
+    $cmd = $_.CommandLine
+    if (-not $cmd) { return }
+    $procName = $_.Name
+    $pid = $_.ProcessId
+
+    foreach ($arg in $JvmCheatArgs) {
+        if ($cmd -match [regex]::Escape($arg)) {
+            Add-Finding -Severity 'CRITICAL' -Category 'Process' -Indicator "JVM cheat argument" `
+                -Location "PID $pid ($procName)" -Evidence $cmd.Substring(0,[Math]::Min(400,$cmd.Length)) `
+                -Confidence 'High'
+        }
+    }
+    foreach ($brand in $ClientBrandStrings) {
+        if ($cmd -match [regex]::Escape($brand)) {
+            Add-Finding -Severity 'HIGH' -Category 'Process' -Indicator "Client brand in command line" `
+                -Location "PID $pid ($procName)" -Evidence $brand -Confidence 'High'
+        }
+    }
+}
+
+# 4.2 DNS cache
+if (-not $SkipDns) {
+    Write-Host "[*] Checking DNS cache for cheat domains..." -ForegroundColor Yellow
+    try {
+        $dns = Get-DnsClientCache -ErrorAction SilentlyContinue
+        foreach ($entry in $dns) {
+            $name = $entry.Entry
+            foreach ($dom in $CheatDomains) {
+                if ($name -like "*$dom*") {
+                    Add-Finding -Severity 'HIGH' -Category 'Network' -Indicator "Cheat domain in DNS cache" `
+                        -Location $name -Evidence "Type=$($entry.Type) Status=$($entry.Status)" `
+                        -Confidence 'High'
+                }
             }
         }
-        # JVM arguments
-        if ($p.ProcessName -match "javaw|java") {
-            try {
-                $cmd = (Get-CimInstance -ClassName Win32_Process -Filter "ProcessId = $($p.Id)" -ErrorAction SilentlyContinue).CommandLine
-                if ($cmd) {
-                    if ($cmd -match "-Dclient\.brand=(Wurst|Impact|Meteor|Sigma|LiquidBounce|Vape|Novoline)") {
-                        Add-Finding -Tier "Detection" -Category "Processes" -Title "Malicious JVM Argument" -Message "JVM brand: $($Matches[0])" -Evidence @{Argument=$Matches[0]}
+    } catch {
+        # Fallback for older systems
+        $raw = ipconfig /displaydns 2>$null | Out-String
+        foreach ($dom in $CheatDomains) {
+            if ($raw -match [regex]::Escape($dom)) {
+                Add-Finding -Severity 'HIGH' -Category 'Network' -Indicator "Cheat domain in DNS cache (legacy)" `
+                    -Location $dom -Evidence "Found via ipconfig /displaydns" -Confidence 'Medium'
+            }
+        }
+    }
+}
+
+# 4.3 Minecraft directory tree
+Write-Host "[*] Discovering Minecraft roots..." -ForegroundColor Yellow
+$mcRoots = Get-MinecraftRoots
+Write-Host "[*] Found $($mcRoots.Count) potential Minecraft roots" -ForegroundColor Green
+
+foreach ($root in $mcRoots) {
+    Write-Host "    Scanning: $root" -ForegroundColor DarkGray
+
+    # mods folder + versions + .minecraft root
+    $searchPaths = @(
+        (Join-Path $root 'mods'),
+        (Join-Path $root 'versions'),
+        (Join-Path $root 'libraries'),
+        $root
+    ) | Where-Object { Test-Path $_ }
+
+    foreach ($sp in $searchPaths) {
+        Get-ChildItem -Path $sp -Recurse -Include *.jar,*.zip,*.dll,*.so,*.json,*.txt,*.cfg,*.properties `
+            -ErrorAction SilentlyContinue | ForEach-Object {
+            $file = $_
+            $rel  = $file.FullName.Substring($root.Length).TrimStart('\')
+
+            # Quick name-based detection
+            $nameLower = $file.Name.ToLowerInvariant()
+            foreach ($brand in $ClientBrandStrings) {
+                if ($nameLower -like "*$($brand.ToLowerInvariant())*") {
+                    Add-Finding -Severity 'HIGH' -Category 'Filesystem' -Indicator "Cheat client name in filename" `
+                        -Location $file.FullName -Evidence $file.Name -Confidence 'High'
+                }
+            }
+
+            # Deep content scan for JARs
+            if ($file.Extension -in '.jar','.zip') {
+                $hits = Search-JarForSignatures -JarPath $file.FullName
+                foreach ($h in $hits) {
+                    $sev = 'MEDIUM'
+                    $conf = 'Medium'
+                    if ($h -like 'PACKAGE:*' -or $h -like 'FULLWIDTH:*') {
+                        $sev = 'CRITICAL'; $conf = 'High'
+                    } elseif ($h -like 'BRAND:*') {
+                        $sev = 'HIGH'; $conf = 'High'
+                    } elseif ($h -like 'MODULE:*') {
+                        $sev = 'MEDIUM'; $conf = 'Medium'
                     }
-                    if ($cmd -match "-D(xray|fly|speed|killaura|reach|scaffold|autocrystal|autototem)") {
-                        Add-Finding -Tier "Detection" -Category "Processes" -Title "JVM Cheat Flag" -Message "Flag: $($Matches[0])" -Evidence @{Argument=$Matches[0]}
-                    }
+                    Add-Finding -Severity $sev -Category 'JAR Content' -Indicator $h `
+                        -Location $file.FullName -Evidence $h -Confidence $conf
                 }
-            } catch {}
-        }
-    }
-    # Registry
-    foreach ($client in $script:CheatClientNames) {
-        $path = "HKCU:\Software\$client"
-        if (Test-Path $path) {
-            Add-Finding -Tier "Detection" -Category "Registry" -Title "Cheat Registry Key" -Message "Key $path exists" -Evidence @{Key=$path}
-        }
-    }
-    # DNS cache
-    $dns = ipconfig /displaydns 2>$null | Select-String "Record Name.*:\s+(.*)" | ForEach-Object { $_.Matches.Groups[1].Value }
-    foreach ($domain in $script:CheatDomains) {
-        if ($dns -match $domain) {
-            Add-Finding -Tier "Detection" -Category "DNS" -Title "Cheat Domain in Cache" -Message "Domain $domain resolved" -Evidence @{Domain=$domain}
-        }
-    }
-    # Prefetch
-    $prefetchDir = "$env:windir\Prefetch"
-    if (-not (Test-Path $prefetchDir)) {
-        Add-Finding -Tier "Detection" -Category "Prefetch" -Title "Prefetch Folder Missing" -Message "Prefetch folder not present"
-    } else {
-        $files = Get-ChildItem $prefetchDir -ErrorAction SilentlyContinue
-        if ($files.Count -lt 5) {
-            Add-Finding -Tier "Warning" -Category "Prefetch" -Title "Low Prefetch Count" -Message "Only $($files.Count) prefetch files – possible deletion"
-        }
-    }
-    # Event logs
-    $logs = @("Application", "System", "Security", "Windows PowerShell")
-    foreach ($log in $logs) {
-        try {
-            $events = Get-WinEvent -LogName $log -MaxEvents 1 -ErrorAction SilentlyContinue
-            if (-not $events) {
-                Add-Finding -Tier "Warning" -Category "Event Logs" -Title "Event Log Cleared" -Message "Event log $log appears empty (cleared?)" -Evidence @{Log=$log}
-            }
-        } catch {}
-    }
-    Write-Host "System scan complete." -ForegroundColor Green
-}
-#endregion
-
-#region Report Export
-function Export-Report {
-    if ($script:Findings.Count -eq 0) {
-        Write-Host "No findings to export." -ForegroundColor Yellow
-        return
-    }
-    $report = @{
-        ScanTime   = $script:ScanStart.ToString("o")
-        Findings   = $script:Findings
-        Summary    = @{
-            Total      = $script:Findings.Count
-            Detections = ($script:Findings | Where-Object { $_.Tier -eq "Detection" }).Count
-            Warnings   = ($script:Findings | Where-Object { $_.Tier -eq "Warning" }).Count
-            Info       = ($script:Findings | Where-Object { $_.Tier -eq "Info" }).Count
-        }
-    }
-    $json = $report | ConvertTo-Json -Depth 5
-    $jsonFile = "MagiciansRevealV2_report_$(Get-Date -Format 'yyyyMMdd_HHmmss').json"
-    $json | Out-File -FilePath $jsonFile -Encoding utf8
-    Write-Host "JSON report saved to $jsonFile" -ForegroundColor Green
-
-    $txt = "MagiciansRevealV2 Forensic Report`n" + "="*50 + "`n"
-    $txt += "Scan Time: $($report.ScanTime)`n`n"
-    foreach ($f in $script:Findings) {
-        $txt += "[$($f.Tier)] $($f.Title)`n  $($f.Message)`n"
-    }
-    $txtFile = "MagiciansRevealV2_report_$(Get-Date -Format 'yyyyMMdd_HHmmss').txt"
-    $txt | Out-File -FilePath $txtFile -Encoding utf8
-    Write-Host "Text report saved to $txtFile" -ForegroundColor Green
-}
-
-function Show-Findings {
-    if ($script:Findings.Count -eq 0) {
-        Write-Host "No findings." -ForegroundColor Yellow
-        return
-    }
-    Write-Host "`n--- Findings ($($script:Findings.Count)) ---" -ForegroundColor Cyan
-    foreach ($f in $script:Findings) {
-        $color = switch ($f.Tier) {
-            "Detection" { "Red" }
-            "Warning"   { "Yellow" }
-            default     { "Gray" }
-        }
-        Write-Host "[$($f.Tier)] $($f.Title)" -ForegroundColor $color
-        Write-Host "  $($f.Message)" -ForegroundColor White
-    }
-    Write-Host ""
-}
-#endregion
-
-#region Main Menu Loop
-if (-not (Test-Admin)) {
-    Write-Host "WARNING: Not running as Administrator – some checks may fail." -ForegroundColor Red
-    Read-Host "Press Enter to continue"
-}
-
-$script:minecraftPath = ""
-do {
-    $choice = Show-Menu
-    switch ($choice) {
-        "1" {
-            $path = Read-Host "Enter Minecraft directory (e.g., C:\Users\...\.minecraft)"
-            if (Test-Path $path) {
-                $script:minecraftPath = $path
-                Scan-MinecraftDirectory -Path $path
             } else {
-                Write-Host "Path not found." -ForegroundColor Red
+                # Non-JAR text-ish files
+                if (Test-StringInFile -Path $file.FullName -Needles $ClientBrandStrings) {
+                    Add-Finding -Severity 'MEDIUM' -Category 'Filesystem' -Indicator "Client brand string in file" `
+                        -Location $file.FullName -Evidence "Matched client brand" -Confidence 'Medium'
+                }
+                if (Test-StringInFile -Path $file.FullName -Needles $ExactModules) {
+                    Add-Finding -Severity 'LOW' -Category 'Filesystem' -Indicator "Exact module name in file" `
+                        -Location $file.FullName -Evidence "Matched module name" -Confidence 'Low'
+                }
             }
-            Read-Host "Press Enter to continue"
-        }
-        "2" {
-            Scan-System
-            Read-Host "Press Enter to continue"
-        }
-        "3" {
-            Export-Report
-            Read-Host "Press Enter to continue"
-        }
-        "4" {
-            Show-Findings
-            Read-Host "Press Enter to continue"
-        }
-        "5" {
-            $script:Findings = @()
-            Write-Host "Findings cleared." -ForegroundColor Green
-            Read-Host "Press Enter to continue"
-        }
-        "6" {
-            Write-Host "Exiting." -ForegroundColor Cyan
-            exit
-        }
-        default {
-            Write-Host "Invalid choice." -ForegroundColor Red
-            Read-Host "Press Enter to continue"
         }
     }
-} while ($true)
-#endregion
+}
+
+# 4.4 Prefetch (cheat launcher indicators)
+Write-Host "[*] Checking Prefetch for launcher activity..." -ForegroundColor Yellow
+$prefetch = "$env:SystemRoot\Prefetch"
+if (Test-Path $prefetch) {
+    Get-ChildItem $prefetch -Filter *.pf -ErrorAction SilentlyContinue | ForEach-Object {
+        $n = $_.Name.ToLowerInvariant()
+        foreach ($brand in $ClientBrandStrings) {
+            if ($n -like "*$($brand.ToLowerInvariant())*") {
+                Add-Finding -Severity 'MEDIUM' -Category 'Prefetch' -Indicator "Cheat-related Prefetch entry" `
+                    -Location $_.FullName -Evidence $_.Name -Confidence 'Medium'
+            }
+        }
+    }
+}
+
+# 4.5 Recent / Jump Lists / Temp
+Write-Host "[*] Scanning recent files and temp locations..." -ForegroundColor Yellow
+$extraLocs = @(
+    "$env:APPDATA\Microsoft\Windows\Recent",
+    "$env:LOCALAPPDATA\Temp",
+    "$env:TEMP",
+    "$env:USERPROFILE\Downloads"
+)
+foreach ($loc in $extraLocs) {
+    if (-not (Test-Path $loc)) { continue }
+    Get-ChildItem $loc -Recurse -Depth 2 -Include *.jar,*.exe,*.lnk,*.bat,*.ps1 -ErrorAction SilentlyContinue |
+        ForEach-Object {
+            $n = $_.Name.ToLowerInvariant()
+            foreach ($brand in $ClientBrandStrings) {
+                if ($n -like "*$($brand.ToLowerInvariant())*") {
+                    Add-Finding -Severity 'MEDIUM' -Category 'Recent/Temp' -Indicator "Cheat artifact in recent/temp" `
+                        -Location $_.FullName -Evidence $_.Name -Confidence 'Medium'
+                }
+            }
+        }
+}
+
+# ---------------------------------------------------------------------------
+# 5. REPORT GENERATION
+# ---------------------------------------------------------------------------
+
+$ScanEnd = Get-Date
+$Duration = ($ScanEnd - $ScanStart).TotalSeconds
+
+# Severity counts
+$crit = ($Findings | Where-Object Severity -eq 'CRITICAL').Count
+$high = ($Findings | Where-Object Severity -eq 'HIGH').Count
+$med  = ($Findings | Where-Object Severity -eq 'MEDIUM').Count
+$low  = ($Findings | Where-Object Severity -eq 'LOW').Count
+
+# Human-readable summary
+$summaryPath = Join-Path $OutputDir 'CheatScan_Report.txt'
+$sb = [System.Text.StringBuilder]::new()
+[void]$sb.AppendLine("=" * 80)
+[void]$sb.AppendLine("MINECRAFT CHEAT CLIENT FORENSIC SCANNER – REPORT")
+[void]$sb.AppendLine("Version      : $ScriptVersion")
+[void]$sb.AppendLine("Scan start   : $($ScanStart.ToString('o'))")
+[void]$sb.AppendLine("Scan end     : $($ScanEnd.ToString('o'))")
+[void]$sb.AppendLine("Duration     : $([math]::Round($Duration,1)) seconds")
+[void]$sb.AppendLine("Host         : $env:COMPUTERNAME")
+[void]$sb.AppendLine("User         : $env:USERNAME")
+[void]$sb.AppendLine("=" * 80)
+[void]$sb.AppendLine("")
+[void]$sb.AppendLine("SEVERITY SUMMARY")
+[void]$sb.AppendLine("  CRITICAL : $crit")
+[void]$sb.AppendLine("  HIGH     : $high")
+[void]$sb.AppendLine("  MEDIUM   : $med")
+[void]$sb.AppendLine("  LOW      : $low")
+[void]$sb.AppendLine("  TOTAL    : $($Findings.Count)")
+[void]$sb.AppendLine("")
+
+if ($Findings.Count -eq 0) {
+    [void]$sb.AppendLine("NO CHEAT INDICATORS FOUND.")
+    [void]$sb.AppendLine("All signatures used are exclusive to known cheat clients and do not appear in legitimate mods.")
+} else {
+    [void]$sb.AppendLine("DETAILED FINDINGS (sorted by severity)")
+    [void]$sb.AppendLine("-" * 80)
+    $ordered = $Findings | Sort-Object @{
+        Expression = {
+            switch ($_.Severity) {
+                'CRITICAL' { 0 }
+                'HIGH'     { 1 }
+                'MEDIUM'   { 2 }
+                'LOW'      { 3 }
+                default    { 4 }
+            }
+        }
+    }, Category, Indicator
+
+    foreach ($f in $ordered) {
+        [void]$sb.AppendLine("[$($f.Severity)] $($f.Category) – $($f.Indicator)")
+        [void]$sb.AppendLine("  Location   : $($f.Location)")
+        [void]$sb.AppendLine("  Evidence   : $($f.Evidence)")
+        [void]$sb.AppendLine("  Confidence : $($f.Confidence)")
+        [void]$sb.AppendLine("")
+    }
+}
+
+[void]$sb.AppendLine("=" * 80)
+[void]$sb.AppendLine("END OF REPORT")
+$sb.ToString() | Out-File -FilePath $summaryPath -Encoding UTF8
+
+# Structured JSON
+$jsonPath = Join-Path $OutputDir 'CheatScan_Report.json'
+$reportObj = [ordered]@{
+    scannerVersion = $ScriptVersion
+    scanStart      = $ScanStart.ToString('o')
+    scanEnd        = $ScanEnd.ToString('o')
+    durationSeconds = [math]::Round($Duration,2)
+    host           = $env:COMPUTERNAME
+    user           = $env:USERNAME
+    summary        = @{
+        critical = $crit
+        high     = $high
+        medium   = $med
+        low      = $low
+        total    = $Findings.Count
+    }
+    findings       = $Findings
+}
+$reportObj | ConvertTo-Json -Depth 6 | Out-File -FilePath $jsonPath -Encoding UTF8
+
+# Console summary
+if (-not $Quiet) {
+    Write-Host ""
+    Write-Host "========== SCAN COMPLETE ==========" -ForegroundColor Cyan
+    Write-Host "CRITICAL : $crit" -ForegroundColor $(if($crit){'Red'}else{'Green'})
+    Write-Host "HIGH     : $high" -ForegroundColor $(if($high){'Red'}else{'Green'})
+    Write-Host "MEDIUM   : $med"  -ForegroundColor $(if($med){'Yellow'}else{'Green'})
+    Write-Host "LOW      : $low"  -ForegroundColor $(if($low){'Yellow'}else{'Green'})
+    Write-Host "TOTAL    : $($Findings.Count)"
+    Write-Host ""
+    Write-Host "Human-readable report : $summaryPath"
+    Write-Host "JSON report           : $jsonPath"
+    Write-Host "===================================" -ForegroundColor Cyan
+}
+
+# Return findings for pipeline use
+return $Findings
